Fix overlapping proposal content

--- a/app/style/Governance.less
+++ b/app/style/Governance.less
@@ -360,6 +360,8 @@
 
 .proposal-details-text {
   overflow: auto;
+  margin-top: 20px;
+  height: 380px;
   p {
     word-wrap: break-word;
   }
