--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -203,8 +203,6 @@
 
 .tabbed-page-body.governance>.tab-content {
   overflow-y: hidden;
-  display: flex;
-  flex-direction: column;
 }
 
 .tabbed-page .tab-content {
